add: 2-col-layout

--- a/2-col-grid/index.html
+++ b/2-col-grid/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="css/stili.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <!--Sidebar-->
+        <nav>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio et dolor vel in sint obcaecati nobis non temporibus, nihil error inventore itaque eius eos, necessitatibus possimus esse fuga sapiente quae!
+        </nav>
+        <!--Main-->
+        <main>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, perferendis sapiente suscipit veritatis, iusto aut molestias aliquam labore assumenda commodi earum placeat deserunt illo unde. Neque quam atque fuga vero!
+            Dolore consectetur et unde nulla. Earum repudiandae quidem amet dolores harum doloribus vel sequi dolore ab labore laborum, adipisci facilis non, assumenda quod. Sed aliquid perferendis recusandae quasi totam aspernatur.
+            Totam tempore laudantium iusto, facilis eaque voluptatum id sit provident consequatur nobis porro repellendus aliquid ipsam ullam deleniti dolorum dolor a fugit doloribus ipsa? Quidem quod fuga repellat natus eveniet.
+        </main>
+    </div>
 </body>
 </html>
